# PasswordLLM

./: .gitattributes  .gitignore  Cargo.toml  Initial Research.md  Password-GPT-Installer.ps1  PasswordGPT-Installer.ps1  PasswordLLM-Installer.ps1  README.md  Research.md  gpujsoninput.py  index.html  package-lock.json  package.json  pnpm-lock.yaml  run.bat  svelte.config.js
.github/workflows/: analyze-powershell.yml  main.yml  powershell.yml  rust.yml  tauri.yml
app/: Cargo.toml
app/src/: main.rs
app/src/frontend_code/: codesomething.rs
database/: NVIDIA_GPU.json
database./: gpu_nvidia.json
frontend/: package.json  pnpm-lock.yaml
frontend/src-tauri/: tauri.conf.json
frontend/src-tauri/src/: main.rs  tauri_commands.rs
frontend/src-tauri/src/tauri-commands/: createstuff.rs
password-llm/: Cargo.toml
password-llm-cli/: Cargo.toml
password-llm-cli/src/: main.rs
password-llm/src/: cal_time.rs  lib.rs  tests.rs  utils.rs
password-llm/src/gpu/: mod.rs
research/: Initial Research.md  NVIDIA_GPU.json  gpujsoninput.py
src/: App.svelte  backend_types.ts  cal_time.rs  gpu.rs  main.rs  mod.rs  styles.css  test.rs  tests.rs  utils.rs
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/src/: cal_time.rs  main.rs
src-tauri/src/gpu/: mod.rs
src/components/: GpuOption.svelte  GpuSelect.svelte
src/gpu/: mod.rs
src/routes/: +page.svelte
tests/: test.rs
