[package]
name = "RealPass"
version = "0.10.3"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.8.3"
round = "0.1.2"
rpassword = "7.2"
tokio = { version = "1.28.2", features = ["full"] }
pwned = { git = "https://github.com/wisespace-io/pwned-rs.git" }
