[package]
name = "password_llm"
version = "0.3.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.htmlk

[dependencies]
round = "0.1.2"
rpassword = "7.2"
tokio = { version = "1.28.2", features = ["full"] }
pwned = { git = "https://github.com/wisespace-io/pwned-rs.git" }
parselnk = "0.1.1"
regex = "1.9.5"
opencl3 = "0.9.3"
thousands = "0.2.0"