[package]
name = "password-llm-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dialoguer = "0.11"
password-llm = { path = "../password-llm" }
tokio = { version = "1.33.0", features = ["full"] }
thousands = "0.2.0"
reqwest = { version = "0.11", features = ["stream"] }
futures-util = "0.3.28"
lazy_static = "1.4.0"