[package]
name = "password-llm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
round = "0.1.2"
tokio = { version = "1.30", features = ["rt"] }
pwned = { git = "https://github.com/wisespace-io/pwned-rs.git" }
regex = "1.9.5"
opencl3 = "0.9.3"
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
